<resources>
    <string name="app_name" translatable="false">CoinWatch</string>
    <string name="cd_top_bar_back">Back</string>
    <string name="cd_top_bar_favourite">Favourite</string>
    <string name="period_short_name_hour">1H</string>
    <string name="period_short_name_day">1D</string>
    <string name="period_short_name_week">1W</string>
    <string name="period_short_name_month">1M</string>
    <string name="period_short_name_three_month">3M</string>
    <string name="period_short_name_year">1Y</string>
...
    <string name="empty_state_favourite_coins_title">No favourite coins</string>
    <string name="empty_state_favourite_coins_subtitle_start">Tap the</string>
    <string name="empty_state_favourite_coins_subtitle_end">to favourite a coin</string>
    <string name="empty_state_coins_title">Couldn\'t load coins</string>
    <string name="empty_state_coins_subtitle">Check your internet connection</string>
    <string name="error_occurred">An error has occurred</string>
    <string name="cd_clear_search">Clear search</string>
    <string name="search_coins_hint">Search coins</string>
    <string name="empty_state_search_results_title">No coins found</string>
    <string name="empty_state_search_results_subtitle">Try adjusting your search</string>
    <string name="empty_chart_message">No chart data available</string>
    <string name="empty_chart_message_short">No chart data</string>
    <string name="cant_find_coin_prompt">Can\'t find the coin you\'re looking for?</string>
    <string name="search_coin_prompt">Try using the search function!</string>
    <string name="cd_list_scroll_top">Scroll to top</string>
    <string name="market_screen">Market</string>
    <string name="search_screen">Search</string>
    <string name="favourites_screen">Favourites</string>
    <string name="pulse_screen">Pulse</string>
    <string name="pulse_market_mood">Market Mood</string>
    <string name="pulse_market_mood_out_of_100">out of 100</string>
    <string name="pulse_market_mood_past_30_days">Past 30 days</string>
    <string name="pulse_mood_extreme_fear">Extreme Fear</string>
    <string name="pulse_mood_fear">Fear</string>
    <string name="pulse_mood_neutral">Neutral</string>
    <string name="pulse_mood_greed">Greed</string>
    <string name="pulse_mood_extreme_greed">Extreme Greed</string>
    <string name="pulse_global_market">Global Market</string>
    <string name="pulse_total_market_cap">Total market cap</string>
    <string name="pulse_volume_24h">24h volume</string>
...
    <string name="pulse_breadth_24h">24h breadth</string>
    <string name="pulse_breadth_up">%1$s up</string>
    <string name="pulse_breadth_down">%1$s down</string>
    <string name="pulse_trending_now">Trending Now</string>
    <string name="pulse_trending_badge">#1 Trending</string>
    <string name="error_state_settings">Error loading settings screen</string>
    <string name="currency_usd" translatable="false">USD</string>
    <string name="currency_gbp" translatable="false">GBP</string>
    <string name="currency_eur" translatable="false">EUR</string>
    <string name="currency_bottom_sheet_title">Coin currency</string>
    <string name="time_of_day_prefix_good">Good</string>
    <string name="error_network_coins">Latest coin data unavailable</string>
    <string name="error_local_coins">Saved coin data unavailable</string>
...
    <string name="error_pulse_market_mood">Market mood unavailable</string>
    <string name="error_pulse_global_market">Global market unavailable</string>
    <string name="error_pulse_trending">Trending coins unavailable</string>
    <string name="error_local_favourite_coin_ids">Saved favourite coin IDs unavailable</string>
    <string name="error_local_favourite_coins">Saved favourite coin data unavailable</string>
    <string name="error_network_favourite_coins">Latest favourite coin data unavailable</string>
    <string name="settings_screen">Settings</string>
    <string name="settings_title_start_screen">Start screen</string>
    <string name="cd_more">More</string>
    <string name="dropdown_option_settings">Settings</string>
    <string name="settings_title_version">CoinWatch version</string>
    <string name="settings_title_source_code">Source code</string>
    <string name="settings_title_privacy_policy">Privacy policy</string>
    <string name="settings_subtitle_github">Available on GitHub</string>
    <string name="source_code_uri">https://github.com/shorthouse/CoinWatch</string>
    <string name="privacy_policy_uri">https://github.com/shorthouse/CoinWatch/blob/main/PRIVACY%20POLICY.md</string>
    <string name="settings_group_preferences">Preferences</string>
    <string name="settings_group_about">About</string>
    <string name="settings_title_rate">Rate CoinWatch</string>
    <string name="settings_subtitle_rate">Leave a Play Store review</string>
    <string name="app_listing_uri">https://play.google.com/store/apps/details?id=dev.shorthouse.coinwatch</string>
    <string name="settings_group_feedback">Feedback</string>
    <string name="market_is_up">Market is up</string>
...
    <string name="market_is_flat">Market is flat</string>
    <string name="cd_expand_favourites">Expand favourites list</string>
    <string name="cd_condense_favourites">Condense favourites list</string>
    <string name="cd_expand_about_description">Expand description</string>
    <string name="cd_collapse_about_description">Collapse description</string>
    <string name="cd_open_link">Open %1$s</string>
    <string name="settings_title_currency">Currency</string>
    <string name="empty_state_search_title">Explore coins</string>
    <string name="empty_state_search_subtitle">Search by name or symbol</string>
    <string name="start_screen_bottom_sheet_title">App start screen</string>
    <string name="market_coin_sort_market_cap">Market Cap</string>
    <string name="market_coin_sort_gainers">Gainers</string>
    <string name="market_coin_sort_losers">Losers</string>
    <string name="market_coin_sort_popular">Popular</string>
    <string name="market_coin_sort_newest">Newest</string>
...
